2007-12-13  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/server_command.rb:  Fix --no-daemon.  Bug by
	Chad Woolley.
	* lib/rubygems/server.rb:  Fix Marshal quick index.  Bug by Chad
	Woolley.
	* lib/rubygems/installer.rb: Respect Gem::Specification#bindir.  Bug
	#16202 by Suraj Kurapati.
	* lib/rubygems/commands/update_command.rb: Fix `gem update mysql`.
	Bug #16244 by Stephen Bannasch.

2007-12-12  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Add --format-executable option to
	install executables with ruby's program-suffix and prefix.  Patch
	#14688 by Jeremy Kemper.  Also, installing in really-verbose mode
	prints out written files.
	* setup.rb:  Add --format-executable option to install gem with ruby's
	program-suffix and prefix.  Add --help.  Fixes bug #16056 by Chad
	Woolley.
	* lib/rubygems/uninstaller.rb:  Fallback to original_platform_name
	correctly.  Patch #15960 by Nicola Piccinini's friend.

2007-12-11  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/validator.rb:  Correct test run failures when no tests
	are provided.  Patch #15701 by Jérémy Zurcher.
	* lib/rubygems/commands/mirror_command.rb:  Don't File.join a
	URI::HTTP.  Patch #16116 by Morgan Nelson.
	* lib/rubygems/commands/unpack_command.rb:  Add --target option to
	`gem unpack`.  Patch #16154 by Kevin Barnes.

2007-12-10  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb:  Revert to nil for the default
	security policy to avoid requiring OpenSSL.
	* lib/rubygems/defaults.rb: Consolidate defaults for easier editing.
	Patch #15150 by Donavan Pantke.

2007-11-27  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_index.rb: Remove dependency on forwadable.
	Patch by Koichi Sasada.
	* lib/rubygems/specification.rb: Reduce dependency on time.rb.  Patch
	by Koichi Sasada.

2007-11-26  Rich Kilmer <rich@infoether.com>

	* lib/rubygems/version.rb: Fix bug 15948 with version bump